# SolarInverter2MQTT

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
_backups/opi-2026-05-22-pre-bms-migration/: README.md  energy.json  host-fingerprint.txt  inverter-bridge.secrets.template  inverter-bridge.service  inverter-bridge.yaml  journal-7d.txt  pip-freeze.txt
docs/: 2026-07-04_revision_codigo-y-host.html  DEPLOYMENT.md  MQTT_CANONICAL.json
inverter_bridge/: __init__.py  __main__.py  aggregator.py  config.py  crc.py  daemon.py  energy_integrator.py  modbus.py  mqtt_publisher.py  parsers.py  sdnotify.py  serial_io.py  srne_map.py
inverter_bridge/bms/: __init__.py  aggregator.py  ble_client.py  discovery.py  octopus_protocol.py  service.py
systemd/: inverter-bridge.service
tests/: test_aggregator.py  test_audit_fixes.py  test_bms_aggregator.py  test_bms_discovery.py  test_bms_octopus_protocol.py  test_bms_service.py  test_cleanup_categorization.py  test_config.py  test_crc.py  test_daemon.py  test_energy_integrator.py  test_modbus.py  test_mqtt_publisher.py  test_parsers.py  test_purge_ha_zombies.py  test_rename_ha_entities.py  test_serial_io.py  test_srne_map.py
tests/fixtures/: block_0035_count20_slave01_fw_ascii_day_pv_active.hex  block_0035_count20_slave02_fw_ascii_day_pv_active.hex  block_0100_count15_slave01_battery_day_pv_active.hex  block_0100_count15_slave02_battery_day_pv_active.hex  block_010f_count03_slave01_bms_day_pv_active.hex  block_010f_count03_slave02_bms_day_pv_active.hex  block_0204_count06_slave01_faults_day_pv_active.hex  block_0204_count06_slave02_faults_day_pv_active.hex  block_0210_count19_slave01_state_day_pv_active.hex  block_0210_count19_slave02_state_day_pv_active.hex  block_0223_count23_slave01_pv_temps_l2_day_pv_active.hex  (+13 more)
tools/: _bms_ble_probe.py  _cleanup_old_bms_discovery.py  capture_fixtures.py  cleanup_orphan_discoveries.py  deploy.sh  purge_ha_zombies.py  rename_ha_entities.py  smoke_test.py  srne_daily_diff.py
