[project]
name = "inverter-bridge"
version = "0.1.0"
description = "SRNE Modbus inverter -> MQTT bridge for home (replaces Solar Assistant)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gabriel", email = "gabrielpc1190@gmail.com" }]
dependencies = [
    "pyserial>=3.5",
    "paho-mqtt>=2.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "websockets>=12",
]

[project.scripts]
inverter-bridge = "inverter_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inverter_bridge"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
